# angel_bridge

./: README.md  activate_node.sh
log/: latest_list
src/angel_bridge_version/: package.xml  setup.cfg  setup.py
src/angel_bridge_version/angel_bridge_version/: angel_bridge_version.py
src/wasp_engine/: .gitignore  LICENSE  README.md
src/wasp_engine/src/agr_joystick/: package.xml  setup.cfg  setup.py
src/wasp_engine/src/agr_joystick/agr_joystick/: agr_joystick.py  agr_joystick_sub.py  agr_joystick_sub_grpc.py  joy_bidirection_pb2_grpc.py
src/wasp_engine/src/api_demo/: package.xml  setup.cfg  setup.py
src/wasp_engine/src/api_demo/api_demo/: pos_pubsub.py  sine_api.py  sine_pub.py  wasp.py
src/wasp_engine/src/app_demo/: package.xml  setup.cfg  setup.py  tes1t.py
src/wasp_engine/src/app_demo/app_demo/: keyop_app.py  pos_app.py  sine_app.py  test_traj.csv
src/wasp_engine/src/bpk_button/: package.xml  setup.cfg  setup.py
src/wasp_engine/src/bpk_button/bpk_button/: helloworld_pb2.py  helloworld_pb2_grpc.py
src/wasp_engine/src/emr_button_publisher/: package.xml  setup.cfg  setup.py
src/wasp_engine/src/emr_button_publisher/emr_button_publisher/: emr_button_bool_publisher.py  emr_button_publisher.py
src/wasp_engine/src/p2p_demo_app/: package.xml  setup.cfg  setup.py
src/wasp_engine/src/p2p_demo_app/launch/: p2p_demo_launch.py
src/wasp_engine/src/p2p_demo_app/p2p_demo_app/: backpack_pub.py  backpack_sub.py  emr_pub.py  emr_sub.py  helloworld_pb2.py  helloworld_pb2_grpc.py  joy_bidirection_pb2.py  joy_bidirection_pb2_grpc.py  joystick_sub.py
src/wasp_engine/src/wasp_engine_demo/: CMakeLists.txt  package.xml
src/wasp_engine/src/wasp_engine_demo/include/eth_packet/: eth_packet.h  eth_packet.hpp
src/wasp_engine/src/wasp_engine_demo/include/ethernet_parser/: ethernet_parser.h  ethernet_structure.h  ethernet_test_show.h
src/wasp_engine/src/wasp_engine_demo/include/wasp_engine_demo/: eth_bridge.h  fake_eth_bridge.h
src/wasp_engine/src/wasp_engine_demo/launch/: engine_emulator_launch.py  eth_demo_launch.py
src/wasp_engine/src/wasp_engine_demo/src/: cm_emulator.cc  eth_bridge.cc  eth_packet.c  eth_packet.cc  fake_eth_bridge.cc  test_engine1.cc  test_eth_packet.cc  test_tcpip_client.cc
